--- a/bin/assets/languages/lang_en/en.xml
+++ b/bin/assets/languages/lang_en/en.xml
@@ -1,19 +1,95 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <lang locale="en" name="English" variant="English">
-	<copy id="Voxel_Model">			<![CDATA[Voxel Model]]></copy>
-	<copy id="Sandbox_List">		<![CDATA[Sandbox List]]></copy>
-	<copy id="Add_Parent_Model">	<![CDATA[Add Parent Model...]]></copy>
-	<copy id="Delete_Parent_Model">	<![CDATA[Delete Parent Model]]></copy>
-	<copy id="Parent_Detail">		<![CDATA[Parent Detail]]></copy>
-	<copy id="New_Model">			<![CDATA[New Model]]></copy>
-	<copy id="Oxel_Utils">			<![CDATA[Oxel Utils]]></copy>
-	<copy id="Add_Child_Model">		<![CDATA[Add Child Model]]></copy>
-	<copy id="Delete_Child_Model">	<![CDATA[Delete Child Model]]></copy>
-	<copy id="Add_Animation">		<![CDATA[Add Animation]]></copy>
-	<copy id="Delete_Animation">	<![CDATA[Delete Animation]]></copy>
-	<copy id="Edit_Animation">		<![CDATA[Edit Animation]]></copy>
-	<copy id="Import_Animation">	<![CDATA[Import Animation]]></copy>
-	<copy id="No_Model_Selected">	<![CDATA[No Model Selected]]></copy>
+	<copy id="voxel_model">			<![CDATA[Voxel Model]]></copy>
+	<copy id="sandbox_list">		<![CDATA[Sandbox List]]></copy>
+	<copy id="model_add">			<![CDATA[Add Model...]]></copy>
+	<copy id="model_delete">		<![CDATA[Delete Model]]></copy>
+	<copy id="model_detail">		<![CDATA[Model Detail]]></copy>
+	<copy id="animation_add">		<![CDATA[Add Animation...]]></copy>
+	<copy id="animation_delete">	<![CDATA[Delete Animation]]></copy>
+	<copy id="animation_detail">	<![CDATA[Animation Detail]]></copy>
+	<copy id="new_model">			<![CDATA[New Model]]></copy>
+	<copy id="oxel_utils">			<![CDATA[Oxel Utils]]></copy>
+	<copy id="add_child_model">		<![CDATA[Add Child Model]]></copy>
+	<copy id="delete_child_model">	<![CDATA[Delete Child Model]]></copy>
+	<copy id="add_animation">		<![CDATA[Add Animation]]></copy>
+	<copy id="delete_animation">	<![CDATA[Delete Animation]]></copy>
+	<copy id="edit_animation">		<![CDATA[Edit Animation]]></copy>
+	<copy id="import_animation">	<![CDATA[Import Animation]]></copy>
+	<copy id="no_model_selected">	<![CDATA[No Model Selected]]></copy>
+	<copy id="inventory">			<![CDATA[Inventory]]></copy>
+	<copy id="earth">				<![CDATA[Earth]]></copy>
+	<copy id="liquid">				<![CDATA[Liquid]]></copy>
+	<copy id="plant">				<![CDATA[Plant]]></copy>
+	<copy id="metal">				<![CDATA[Metal]]></copy>
+	<copy id="air">					<![CDATA[Air]]></copy>
+	<copy id="dragon">				<![CDATA[Dragon]]></copy>
+	<copy id="util">				<![CDATA[Util]]></copy>
+	<copy id="gem">					<![CDATA[Gem]]></copy>
+	<copy id="avatar">				<![CDATA[Avatar]]></copy>
+	<copy id="light">				<![CDATA[Light]]></copy>
+	<copy id="bonuses">				<![CDATA[Bonuses]]></copy>
+	<copy id="all">					<![CDATA[All]]></copy>
+	<copy id="crafting">			<![CDATA[Crafting]]></copy>
+	<copy id="damage">				<![CDATA[Damage]]></copy>
+	<copy id="speed">				<![CDATA[Speed]]></copy>
+	<copy id="durability">			<![CDATA[Durability]]></copy>
+	<copy id="luck">				<![CDATA[Luck]]></copy>
+	<copy id="optional">			<![CDATA[optional]]></copy>
+	<copy id="materials">			<![CDATA[Materials]]></copy>
+	<copy id="leather">				<![CDATA[Leather]]></copy>
+	<copy id="craft_item">			<![CDATA[Craft Item]]></copy>
+	<copy id="all_items">			<![CDATA[All items]]></copy>
+	<copy id="backpack">			<![CDATA[Backpack]]></copy>
+	<copy id="store">				<![CDATA[Store]]></copy>
+	<copy id="voxels">				<![CDATA[Voxels]]></copy>
+	<copy id="models">				<![CDATA[Models]]></copy>
+	<copy id="regions">				<![CDATA[Regions]]></copy>
+	<copy id="beast">				<![CDATA[Beast]]></copy>
+	<copy id="architecture">		<![CDATA[Architecture]]></copy>
+	<copy id="characters">			<![CDATA[Characters]]></copy>
+	<copy id="plants">				<![CDATA[Plants]]></copy>
+	<copy id="furniture">			<![CDATA[Furniture]]></copy>
+	<copy id="personal">			<![CDATA[Personal]]></copy>
+	<copy id="group">				<![CDATA[Group]]></copy>
+	<copy id="manage">				<![CDATA[Manage]]></copy>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 	
 	
 	<bundle id="texts">
