--- a/bin/assets/languages/lang_en/en.xml
+++ b/bin/assets/languages/lang_en/en.xml
@@ -61,9 +61,10 @@
 	<copy id="add_a_script">		<![CDATA[Add A Script]]></copy>
 	<copy id="add_an_animation">	<![CDATA[Add An Animation]]></copy>
 	
-	<copy id="ammo_add">			<![CDATA[Add Amoo]]></copy>
+	<copy id="ammo_add">			<![CDATA[Add Ammo]]></copy>
 	<copy id="ammo_delete">			<![CDATA[Delete Ammo]]></copy>
 	<copy id="ammo_detail">			<![CDATA[Ammo Detail]]></copy>
+	<copy id="Can_use_these_ammos"> <![CDATA[Can use these ammos]]></copy>
 	
 	
 	
